@@ -846,6 +846,14 @@ Flags to put in the CLASSPATH environment variable when invoking the configure s
 .br 
 .Sy Type:
 .Em optional
+.It Ic configure.macosx_deployment_target
+Flags to put in the MACOSX_DEPLOYMENT_TARGET environment variable when invoking the configure script.
+.br 
+.Sy Type:
+.Em optional
+.br 
+.Sy Example:
+.Dl configure.macosx_deployment_target 10.4
 .It Ic configure.cc
 C-compiler to put in the CC environment variable when invoking the configure script.
 .br
